# Satispay.rs

./: Cargo.toml  README.md
src/: daily_closure.rs  error.rs  lib.rs  payment.rs  person.rs  utils.rs
