[package]
name = "satispay"
version = "0.4.8"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"
description = "Tools to interact with Satispay API"
repository = "https://github.com/eutampieri/Satispay.rs"
license = "Unlicense"
keywords = ["satispay", "api", "electronic-payment"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
serde_json = "1.0"
rsa = "0.3"
ureq = "1.4"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9"
chrono = {version = "0.4", features = ["serde"]}
urlencoding = "1.1"
