[package]
name = "satispay"
version = "0.4.9"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"
description = "Tools to interact with Satispay API"
repository = "https://github.com/eutampieri/Satispay.rs"
license = "Unlicense"
keywords = ["satispay", "api", "electronic-payment"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
serde_json = "1.0"
rsa = "0.6"
ureq = "2.5"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10"
chrono = {version = "0.4", features = ["serde"]}
urlencoding = "2.1"
